# sca-kitchen-sink

./: .gitignore
csharp/nuget/: Program.cs
golang/gomod/: go.mod  main.go
java/gradle/: build.gradle
java/gradle/src/main/java/com/vulnerable/: App.java
java/maven/: pom.xml
javascript/: package.json  pnpm-lock.yaml
javascript/npm/: index.js  package-lock.json  package.json
javascript/pnpm/: index.js  package.json  pnpm-lock.yaml
javascript/yarn/: .pnp.cjs  package.json
php/composer/: index.php
python/poetry/: app.py  pyproject.toml
ruby/rubygems/: Gemfile  vulnerable.rb
rust/cargo/: Cargo.toml
rust/cargo/src/: main.rs
