[tool.poetry]
name = "vulnerable-python"
version = "0.1.0"
description = "Demo of vulnerable Python dependencies"
authors = ["Security Researcher <researcher@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
Flask = "1.0.2"
PyYAML = "5.3.1"
requests = "2.19.1"
SQLAlchemy = "1.3.0"
Werkzeug = "0.14.1"
Jinja2 = "2.10.1"
urllib3 = "1.24.1" 
